--- a/EnlightenMobile/App.xaml
+++ b/EnlightenMobile/App.xaml
@@ -2,13 +2,23 @@
 <Application xmlns="http://xamarin.com/schemas/2014/forms" 
 			 xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
 			 xmlns:d="http://xamarin.com/schemas/2014/forms/design" 
-			 xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
+			 xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+
+             xmlns:telerikDataControls="clr-namespace:Telerik.XamarinForms.DataControls;assembly=Telerik.XamarinForms.DataControls"
+             xmlns:telerikInput="clr-namespace:Telerik.XamarinForms.Input;assembly=Telerik.XamarinForms.Input"
+
 			 mc:Ignorable="d" 
 			 x:Class="EnlightenMobile.App">
+
     <Application.Resources>
 
         <!-- This is basically your stylesheet.css for the whole app -->
         <ResourceDictionary>
+
+            <!-- =========================================================== -->
+            <!-- Xamarin Forms -->
+            <!-- =========================================================== -->
+
             <Style TargetType="NavigationPage">
                 <Setter Property="BarBackgroundColor"       Value="#474747" />
                 <Setter Property="BarTextColor"             Value="White" />
@@ -41,6 +51,55 @@
                 <Setter Property="ClearButtonVisibility"    Value="WhileEditing" />
                 <Setter Property="PlaceholderColor"         Value="#f7e842" />
             </Style>
+
+            <!-- =========================================================== -->
+            <!-- Telerik ListPicker -->
+            <!-- =========================================================== -->
+
+            <!-- the label with the value you click to summon the pop-up -->
+            <Style TargetType="Label" x:Key="listPickerDisplayLabelStyle">
+                <Setter Property="VerticalTextAlignment" Value="Center"/>
+                <Setter Property="Padding" Value="10, 5, 10, 5" />
+                <Setter Property="TextColor" Value="#bbb"/>
+                <Setter Property="BackgroundColor" Value="#555"/>
+                <Setter Property="FontSize" Value="Medium"/>
+            </Style>
+
+            <!-- the pop-up frame -->
+            <Style TargetType="telerikInput:PickerPopupContentView" x:Key="listPickerPopupViewStyle">
+                <Setter Property="BackgroundColor" Value="#bbb"/>
+                <Setter Property="HeightRequest" Value="300" />
+            </Style>
+
+            <!-- the frames holding the item Labels, which are themselves styled by the Template -->
+            <Style TargetType="telerikDataControls:SpinnerItemView" x:Key="listPickerItemStyle">
+                <Setter Property="BackgroundColor" Value="#aaa"/> 
+            </Style>
+            <Style TargetType="telerikDataControls:SpinnerItemView" x:Key="listPickerSelectedItemStyle">
+                <Setter Property="BackgroundColor" Value="#ccc"/> 
+            </Style>
+
+            <!-- the pop-up header -->
+            <Style TargetType="telerikInput:PickerPopupHeaderView" x:Key="listPickerHeaderStyle">
+                <Setter Property="BackgroundColor" Value="#999"/>
+                <Setter Property="HorizontalOptions" Value="FillAndExpand"/>
+            </Style>
+            <Style TargetType="Label" x:Key="listPickerHeaderLabelStyle">
+                <Setter Property="TextColor" Value="#444"/>
+                <Setter Property="HorizontalOptions" Value="Center"/>
+                <Setter Property="VerticalOptions" Value="Center"/>
+                <Setter Property="FontSize" Value="Title"/>
+            </Style>
+
+            <!-- the pop-up footer -->
+            <Style TargetType="Button" x:Key="listPickerCancelButtonStyle">
+                <Setter Property="TextColor" Value="#777"/>
+            </Style>
+            <Style TargetType="Button" x:Key="listPickerAcceptButtonStyle">
+                <Setter Property="TextColor" Value="#555"/>
+                <Setter Property="FontAttributes" Value="Bold"/>
+            </Style>
+
         </ResourceDictionary>
     </Application.Resources>
 </Application>
